examples/test/testpolicy11111.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11111
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key6: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value26
          key32: value27
          key22: value8
      podSelector:
        matchLabels:
          key24: value41
          key12: value49
